Fixed overflow issue

--- a/src/main.scss
+++ b/src/main.scss
@@ -40,7 +40,7 @@ body{
     .hero-sub-title{
         white-space: nowrap;
         font-size: 2rem;
-        letter-spacing: 13px;
+        letter-spacing: 5px;
     }
 
     .top-svg-group{
@@ -136,6 +136,7 @@ body{
 }
 
 .built-with-react-wrapper{
+    display: none;
     background: darken(theme-color("light"), 3%);
 
     .built_with_react_component{
@@ -154,6 +155,8 @@ body{
     font-size: 3rem;
     border-bottom: solid #dee2e6 1px;
     font-family: 'Kumbh Sans', sans-serif;
+
+
 }
 
 @media (max-width: 575px) {
